syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "/protos";

package streaming;

service Streaming {
  rpc StreamOperatorSideVideo(stream Data) returns (stream Data) {}
  rpc StreamOperatorSideVoice(stream Data) returns (stream Data) {}
  rpc StreamPOSSideVideo(stream Data) returns (stream Data) {}
  rpc StreamPOSSideVoice(stream Data) returns (stream Data) {}
  rpc SpeechToText(google.protobuf.Empty) returns (stream SpeechToTextData) {}
  rpc ListenEventPOSSide(ListenEventPOSSideRequest)returns (stream ListenEventPOSSideResponse) {}
  rpc ListenEventOperatorSide(ListenEventOperatorSideRequest)returns (stream ListenEventOperatorSideResponse) {}
  rpc ListenNotes(google.protobuf.Empty) returns (stream ListenEventResponse) {}
  rpc ListenListPos(ListenListPosRequest) returns  (stream ListenListPosResponse){}
}

message Data { bytes data = 1; }

message SpeechToTextData {
  string speaker = 1;
  string content = 2;
  string sendingTime = 3;
}

message ListenEventOperatorSideResponse {
  string event = 1;
  string payload = 2;
}
message ListenEventOperatorSideRequest { string centerID = 1; }

message ListenEventPOSSideRequest { string posId = 1; }

message ListenEventPOSSideResponse {
  string event = 1;
  string payload = 2;
}

message ListenEventResponse {
  int64 event = 1;
  string payload = 2;
}

message ListenListPosRequest{
  int64 groupId = 1;
}

message ListPosResponse{
  int64 posId = 1;
  int64 talkSessionId = 2;
  int32 status = 3;
  bool mainPos = 4;
  repeated int64 cameraId = 5;
  int64 defaultCameraId = 6;
  string serverUri = 7;
  string name = 8;
  string address = 9;
  string startTimeDeteted = 10;
}

message ListenListPosResponse{
  repeated ListPosResponse ListPosResponse = 1;
}